--- a/index.html
+++ b/index.html
@@ -4,93 +4,124 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Wix+Madefor+Display:wght@800&display=swap" rel="stylesheet">
   <title>HTML & CSS Review</title>
+
 </head>
 <body>
 
+<header>
+ <section class="hero">
+  <h1></h1>Scoopalicious</h1>
+</section>
 
-  Scoopalicious
+ <nav>
+  <ul>
+  <li><a href="#flavours">Flavours</a></li>
+  <li><a href="#location">Locations</a></li>
+  <li><a href="#online">Shop online</a></li>
 
-  Flavours
-  Locations
-  Shop online
-
+  </ul>
+ </nav>
+</header>
 
   <!-- In this hero section you will use the provided ice-cream-cones.jpg as a background image behind the word Scoopalicious. This would be the only section you will want to give a height. -->
-  Scoopalicious
+<section class="hero">
+  <h1>Scoopalicious</h1>
+  <img src="Images/ice-cream-cones.jpg">
+</section>
 
 
 
-
-  Welcome to Scoopalicious!
-
-  Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!
-
-
-
-  Top 5 Fan Favourites
-
-  Choco-Obsession
+<main>
+  <main role="main" id="main">
+    <section id="intro">
+    <section class="intro">
   
-  A rich, velvety dark chocolate ice cream made from a blend of organic cocoa and creamy coconut cream.
+  <div>
+    <section id="section1" class="section1">
+      <div class="wrapper">
+  <h2>Welcome to Scoopalicious!</h2>
 
+  <p>Serving the finest vegan ice cream in town, we specialize in crafting dairy-free delights that will send your taste buds into overdrive. From the moment you step inside our cozy urban shop, you'll know you're in for a treat!</p>
 
+</div>
+</main>
+</section>
 
-  Very Berry Blast
+<section id="section2" class="section2">
+<div class="wrapper">
   
-  A harmonious explosion of raspberry, blackberry, and blueberry swirls in a smooth almond base.
+<h2>Top 5 Fan Favourites</h2>
 
-
-
-  Cookie Crumble Craze
+  <p>Choco-Obsession</p>
   
-  Scrummy cookie crumbles meet the creaminess of cashew-based vanilla ice cream.
+  <p>A rich, velvety dark chocolate ice cream made from a blend of organic cocoa and creamy coconut cream.</p>
 
 
 
-  Peanut Butter Paradise
+  <p>Very Berry Blast</p>
   
-  Luscious peanut butter ribbons swirled throughout a silky oat milk ice cream.
+  <p>A harmonious explosion of raspberry, blackberry, and blueberry swirls in a smooth almond base.</p>
 
 
 
-  Mango Tango Sorbet
+  <p>Cookie Crumble Craze</p>
   
-  A zesty dance of mango and lime, perfect for a refreshing treat on a hot summer day.
+  <p>Scrummy cookie crumbles meet the creaminess of cashew-based vanilla ice cream.</p>
 
 
 
-  Meet Our Team
-
-  We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.
-
+  <p>Peanut Butter Paradise</p>
   
+  <p>Luscious peanut butter ribbons swirled throughout a silky oat milk ice cream.</p>
+
+
+
+  <p>Mango Tango Sorbet</p>
   
+  <p>A zesty dance of mango and lime, perfect for a refreshing treat on a hot summer day.</p>
+
+</div>
+</section>
+
+<section id="section3" class="section3">
+  <div class="wrapper">
+  <p>Meet Our Team</p>
+
+  <p>We're passionate about ice cream, and our dedicated team of flavour wizards works diligently to create and perfect the most delectable vegan desserts.</p>
+
+
   <!-- Display the image: sophia-lee.jpg -->
-  Sophia Lee
-  Founder & Flavour Guru
+  <h3>Sophia Lee</h3>
+  <p>Founder & Flavour Guru</p>
 
 
   <!-- Display the image: henry-chen.jpg -->
-  Henry Chen
-  Master Scooper
+  <h3>Henry Chen</h3>
+  <p>Master Scooper</p>
 
   
   <!-- Display the image: olivia-parks.jpg -->
-  Olivia Parks
-  Vegan Dessert Chef
+ <h3>Olivia Parks</h3>
+  <p>Vegan Dessert Chef</p>
 
   
   <!-- Display the image: elijah-taylor.jpg -->
-  Elijah Taylor
-  Flavour Innovator
+  <h3>Elijah Taylor</h3>
+  <p>Flavour Innovator</p>
+
+</div>
+</section>
 
 
+<footer>
+ <p> <small>All rights reserved © 2023 Scoopalicious</small></p>
 
-
-  All rights reserved © 2023 Scoopalicious
-
-
+</footer>
   
 </body>
 </html>
